[CSS] fix About page up & down two avatar images align position.

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -82,7 +82,6 @@ img#avatar {
   visibility: visible;
   width: 200px;
   margin-right: 40px;
-  margin-bottom: 20px;
 }
 
 /* preamble */
